# stateproof-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6dac110ab5c1_merge_branches.py  a1b2c3d4e5f6_add_cascade_deletes_to_foreign_keys.py  b2c3d4e5f6a7_remove_session_count_from_workflows.py  b3a83d900893_initial_schema.py  be16cb1d8f5d_rename_company_to_organization.py  c4f1a8200101_add_clients_and_refresh_tokens.py  d2899d3c2373_merge_heads.py  d3754eb50c5b_add_companies_users_and_company_scoped_.py  d7a2c3e8f5b1_widen_client_api_key_column.py  e0444576ba4d_add_user_status_and_invite_tokens.py  f1a2b3c4d5e6_add_leaf_hashes_to_workflows.py  f5a6b7c8d9e0_add_password_reset_tokens.py  g7b4c5d6e8f2_add_events_table_and_event_tree_fields.py  h8c5d6e7f9a3_remove_raw_data_from_events_and_event_leaf_arrays_from_sessions.py  i9d0e1f2a3b4_remove_leaf_prev_hash_add_tree_type.py  k1f2a3b4c5d6_split_tree_nodes_remove_events.py  l2a3b4c5d6e7_add_user_role_column.py  m0a1b2c3d4e5_remove_workflow_trees.py  n1b2c3d4e5f6_add_events_session_root_remove_tree_nodes.py  o2c3d4e5f6a7_make_session_root_nullable.py  p3b4c5d6e7f8_add_description_and_url_to_workflows.py  q4d5e6f7a8b9_add_data_hash_to_events.py
src/: main.py
src/db/: base.py  session.py
src/middleware/: auth.py  config.py
src/models/: __init__.py  auth.py  base.py
src/schemas/: auth.py  event.py  session.py  tree_node.py  verify.py  workflow.py
src/services/: merkle.py  (+4 more)
tests/: conftest.py  test_api.py  test_auth.py  test_merkle.py
(+4 files in other folders)
